--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--black);
+  background-color: #E5E5E5;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 a {
@@ -13,4 +14,18 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --black: #3B434E;
+  --white: #FFF;
+  --primary: #7653FC;
+  --primary-hover: #5939db;
+  --red: #DE0000;
+  --red-light: #FC836D;
+  --green: #1DC37E;
+  --green-light: #C8F8E4;
+  --grey: #A4A4A4;
+  --grey-dark: #787D85;
+  --grey-hover: #DBDBDB;
 }
