--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -17,3 +17,18 @@
 .input::placeholder {
   color: var(--placeholder);
 }
+
+.error {
+  border: 2px solid var(--red-light);
+}
+
+.inputWrapper {
+  position: relative;
+}
+
+.errorMessage {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  color: var(--red-light);
+}
