--- a/components/Rating/Rating.module.css
+++ b/components/Rating/Rating.module.css
@@ -9,3 +9,18 @@
 .editable {
   cursor: pointer;
 }
+
+.ratingWrapper {
+  position: relative;
+}
+
+.error svg {
+  stroke: var(--red-light);
+}
+
+.errorMessage {
+  position: absolute;
+  color: var(--red-light);
+  bottom: -15px;
+  left: -20px;
+}
