--- a/page-components/TopPageComponent/TopPage.module.css
+++ b/page-components/TopPageComponent/TopPage.module.css
@@ -8,6 +8,8 @@
   align-items: baseline;
   justify-items: left;
   gap: 20px;
+
+  margin-bottom: 20px;
 }
 
 .hhTitle {
@@ -16,4 +18,14 @@
   justify-items: left;
   align-items: baseline;
   gap: 20px;
+}
+
+@media screen and (max-width: 640px) {
+  .title {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: baseline;
+  justify-items: left;
+  gap: 20px;
+}
 }
